--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,9 +13,18 @@ body .main-body {
     width: 100%;
 }
 
+a {
+    outline: none;
+    text-decoration: none;
+}
+
+.bg-primary {
+    background-color: #253AA3;
+}
+
 body .main-body .sidebar {
-    min-width: 300px;
-    max-width: 300px;
+    min-width: 240px;
+    max-width: 240px;
     background-color: #253AA3;
     height: 100vh;
     position: fixed;
@@ -24,7 +33,7 @@ body .main-body .sidebar {
 
 body .main-body .sidebar .logo-section {
     width: 100%;
-    height: 200px;
+    height: 180px;
     background-color: #253AA3;
     display: flex;
     flex-direction: column;
@@ -33,17 +42,17 @@ body .main-body .sidebar .logo-section {
 }
 
 body .main-body .sidebar .logo-section .logo {
-    height: 120px;
-    width: 120px;
+    height: 100px;
+    width: 100px;
     border-radius: 50%;
 }
 
 body .main-body .sidebar .logo-section .label {
     background-color: white;
-    padding: 8px 30px;
-    border-radius: 7px;
+    padding: 5px 20px;
+    border-radius: 5px;
     color: #253AA3;
-    font-size: 1.1rem;
+    font-size: .900rem;
     font-weight: bold;
     text-transform: uppercase;
     margin-top: -10px;
@@ -61,7 +70,7 @@ body .main-body .sidebar nav .nav-item {
     align-items: center;
     padding: 10px 30px;
     color: white;
-    font-size: 1.2rem;
+    font-size: .900rem;
     margin-bottom: 10px;
     text-decoration: none;
 }
@@ -100,7 +109,7 @@ body .main-body .sidebar nav .nav-item .nav-item-container .nav-item-label {
 }
 
 body .main-body .sidebar nav .nav-item .nav-item-container .nav-item-icon {
-    margin-right: 24px;
+    margin-right: 16px;
 }
 
 body .main-body .sidebar nav .nav-item-collapsable-parent {
@@ -108,8 +117,8 @@ body .main-body .sidebar nav .nav-item-collapsable-parent {
 }
 
 body .main-body .sidebar nav .nav-item-collapsable-child {
-    padding-left: 80px;
-    font-size: 1rem;
+    padding-left: 65px;
+    font-size: .900rem;
     margin-bottom: 0px;
 }
 
@@ -119,7 +128,7 @@ body .main-body .sidebar nav .nav-item-collapsable-child .nav-item-container .na
 
 
 body .main-body .main-container {
-    margin-left: 300px;
+    margin-left: 240px;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
@@ -128,7 +137,7 @@ body .main-body .main-container {
 
 body .main-body .main-container .topbar {
     height: 100px;
-    width: calc(100% - 300px);
+    width: calc(100% - 240px);
     background-color: white;
     position: fixed;
     display: flex;
@@ -140,12 +149,13 @@ body .main-body .main-container .topbar {
 body .main-body .main-container .topbar .date {
     margin: 0px;
     text-align: center;
-    padding: 0px 40px;
+    padding: 0px 0px 0px 20px;
+    font-size: .900rem;
 }
 
 body .main-body .main-container .topbar .search {
     flex:1;
-    max-width: 500px;
+    max-width: 440px;
     border: 2px solid #9499B71F;
     border-radius: 12px;
     padding: 8px;
@@ -220,7 +230,7 @@ body .main-body .main-container .topbar .profile-avatar-container .profile-avata
     border-radius: 8px;
     color: #253AA3;
     border-radius: 0px;
-    font-size: .870rem;
+    font-size: .800rem;
 }
 
 .dropdown-toggle::after {
@@ -273,7 +283,7 @@ p {
 }
 
 .points-container {
-    width: 320px;
+    width: 280px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -293,7 +303,7 @@ p {
 }
 
 .points-container .credits-container .label-head {
-    font-size: 1.4rem;
+    font-size: 1rem;
     color: white;
     font-weight: bold;
 }
@@ -307,7 +317,7 @@ p {
 }
 
 .points-container .credits-container .credits-body .credits-head {
-    font-size: 1rem;
+    font-size: .800rem;
     font-weight: 200;
     color: #cacaca;
 }
@@ -321,8 +331,8 @@ p {
 }
 
 .points-container .credits-container .credits-body .credits-points .credit-points-icon {
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
     border-radius: 50%;
     background-color: white;
     display: flex;
@@ -333,12 +343,12 @@ p {
 }
 
 .points-container .credits-container .credits-body .credits-points .credit-points-icon .points-icon {
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
     border-radius: 50%;
     border: 1px solid #253AA3;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     color: #253AA3;
     font-weight: bold;
 }
@@ -355,7 +365,7 @@ p {
     align-items: center;
     color: #253AA3;
     width: 100%;
-    font-size: 1.4rem;
+    font-size: .900rem;
     padding: 10px 30px;
 }
 
@@ -377,6 +387,7 @@ p {
     color: white;
     text-align: right;
     padding: 10px;
+    font-size: .900rem;
 }
 
 .credits-table tbody .t-row .t-value {
@@ -385,6 +396,7 @@ p {
     padding: 10px;
     text-align: center;
     font-weight: bold;
+    font-size: .900rem;
 }
 
 body .main-body .page-body {
@@ -400,6 +412,7 @@ body .main-body .page-body .welcome-widget {
     border: 1px solid #253AA34D;
     background-color: white;
     border-radius: 5px;
+    padding: 10px;
 }
 
 body .main-body .page-body .welcome-widget .welcome-btn {
@@ -416,8 +429,8 @@ body .main-body .page-body .welcome-widget .welcome-btn {
 }
 
 .welcome-avatar .welcome-avatar-logo {
-    height: 130px;
-    width: 130px;
+    height: 90px;
+    width: 90px;
     border-radius: 50%;
     border: 2px solid white;
 }
@@ -428,20 +441,37 @@ body .main-body .page-body .welcome-widget .welcome-btn {
 
 .welcome-content .title {
     color: #2A3050;
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     letter-spacing: 0.06px;
 }
 
 .welcome-content .sub-title {
     color: #878BA6;
-    font-size: 1rem;
+    font-size: .800rem;
     letter-spacing: 0.06px;
 }
 
 .welcome-content .content {
     color: #2A3050;
-    font-size: 1.3rem;
+    font-size: .900rem;
     letter-spacing: 0.06px;
+}
+
+.welcome-widget .welcome-btns-main {
+    flex:1;
+}
+
+.welcome-widget .welcome-btns {
+    /* width: 31%; */
+    background-color: #253AA3;
+    color: white;
+    text-align: center;
+    font-size: .800rem;
+    height: 50px;
+    padding: 6px 10px;
+    margin: 0px 5px;
+    border-radius: 6px;
+    flex: 1;
 }
 
 .quick-widget {
@@ -450,6 +480,7 @@ body .main-body .page-body .welcome-widget .welcome-btn {
     border-radius: 5px;
     padding-bottom: 10px;
     width: 32%;
+    font-size: .900rem;
 }
 
 .quick-widget-1 {
@@ -484,11 +515,11 @@ body .main-body .page-body .welcome-widget .welcome-btn {
 }
 
 .quick-widget .quick-widget-value {
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 .quick-widget .quick-widget-label {
-    font-size: 1rem;
+    font-size: .800rem;
 }
 
 .full-widget {
@@ -498,7 +529,7 @@ body .main-body .page-body .welcome-widget .welcome-btn {
     border-radius: 5px;
 }
 
-.header {
+.header, .univ-list-header {
     width: 100%;
     background-color: #253AA3;
     padding: 14px 14px;
@@ -506,9 +537,14 @@ body .main-body .page-body .welcome-widget .welcome-btn {
     border-top-right-radius: 5px;
 }
 
-.header .label {
+.header .label, .univ-list-header .label {
     color: white;
-    font-size: 1.2rem;
+    font-size: .900rem;
+    flex: 1;
+}
+
+.univ-list-header .label {
+    text-align: center;
 }
 
 .bg-grey {
@@ -526,7 +562,7 @@ body .main-body .page-body .welcome-widget .welcome-btn {
 .table-heading {
     color: #000000;
     font-weight: bold;
-    font-size: .880rem;
+    font-size: .800rem;
 }
 
 .table-passouts-header tr td {
@@ -537,35 +573,43 @@ body .main-body .page-body .welcome-widget .welcome-btn {
     text-align: center;
     border-bottom: 1px solid #d3d3d3;
     padding: 8px;
+    font-size: .800rem;
+}
+
+.table-passouts-body tr td .table-btn {
+    background-color: #253AA3;
+    padding: 6px 10px;
+    width: 100%;
+    font-size: .800rem;
+    color: white;
+    border-radius: 6px;
 }
 
 .table-passouts-body tr:last-child td {
     border-bottom: none;
 }
 
-.bg-primary {
-    background-color: #253AA3;
-}
-
 .account-info-widget {
     background-color: #253AA3;
     padding: 22px;
-    border-radius: 5px;
+    border-radius: 6px;
 }
 
 .account-info-widget .avatar-circle {
-    height: 80px;
-    width: 80px;
+    height: 50px;
+    width: 50px;
     border-radius: 50%;
     background-color: white;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 200;
     color: #253AA3;
 }
-
+.account-info-widget .account-info-content {
+    flex: 1;
+}
 .account-info-widget .label {
     color: white;
-    font-size: .890rem;
+    font-size: .800rem;
     margin-left: 15px;
 }
 
@@ -588,23 +632,32 @@ body .main-body .page-body .welcome-widget .welcome-btn {
     padding-bottom: 10px;
 }
 
+
 .notification-list .notification-list-item {
     padding: 12.5px 8px; 
     width: 100%;
+    border-bottom: 1px solid #253AA34D;
+}
+
+.regular-custom-btn {
+    width: 100%;
+    background-color: #253AA3;
+    color: white;
+    font-size: .900rem;
+    padding: 6px 10px;
+    border-radius: 6px;
+    text-align: center;
 }
 
 .notification-list .notification-list-item .notification-icon {
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
     border-radius: 50%;
     background-color: #253AA3;
     color: white;
-    font-size: 2rem;
+    font-size: 1.4rem;
 }
 
-.notification-list .notification-list-item {
-    border-bottom: 1px solid #253AA34D;
-}
 
 .notification-list .notification-list-item:last-of-type {
     border-bottom: none;
@@ -615,7 +668,7 @@ body .main-body .page-body .welcome-widget .welcome-btn {
 }
 
 .notification-list .notification-list-item .notification-content .sub-title {
-    font-size: .900rem;
+    font-size: .680rem;
     flex: 1;
 }
 
@@ -625,9 +678,9 @@ body .main-body .page-body .welcome-widget .welcome-btn {
 
 .notification-list .notification-list-item .notification-content .title-with-badge .icon-badge {
     background-color: #C2C4D1;
-    font-size: .600rem;
+    font-size: .500rem;
     color: white;
-    padding: 1px 4px;
+    padding: 1px 2px;
     border-radius: 10px;
 }
 
@@ -636,12 +689,16 @@ body .main-body .page-body .welcome-widget .welcome-btn {
 }
 
 .notification-list .notification-list-item .notification-content .title-with-badge .title {
-    font-size: 1rem;
+    font-size: .720rem;
 }
 
+
+.univ-table {
+    padding: 0px 5px; 
+}
 .table-universities-header tr td {
     text-align: left;
-    font-size: .900rem;
+    font-size: .700rem;
     color: #878BA6;
 }
 
@@ -649,6 +706,7 @@ body .main-body .page-body .welcome-widget .welcome-btn {
     text-align: left;
     border-bottom: 1px solid #d3d3d3;
     padding: 12px;
+    font-size: .700rem;
 }
 
 .table-universities-body tr:last-child td {
@@ -678,7 +736,11 @@ body .main-body .page-body .welcome-widget .welcome-btn {
 }
 
 .stat-widget .stat-content .title {
-    font-size: 1.2rem;
+    font-size: .900rem;
+}
+
+.stat-widget .stat-content .sub-title {
+    font-size: .900rem;
 }
 
 .stat-info-widget {
@@ -703,6 +765,11 @@ body .main-body .page-body .welcome-widget .welcome-btn {
     color: white;
 }
 
+.stat-info-widget .stat-info-content .title {
+    font-weight: 500;
+    font-size: 1rem;
+}
+
 .stat-info-widget .stat-info-content .sub-title {
     font-weight: 200;
     font-size: .800rem;
@@ -711,4 +778,355 @@ body .main-body .page-body .welcome-widget .welcome-btn {
 .stat-info-widget .stat-info-content .stat-info-no {
     font-size: 3rem;
     font-weight: bold;
+}
+
+.purchase-modal-header {
+    border: none;
+}
+
+.purchase-modal-header .modal-title {
+    text-align: center;
+}
+
+.purchase-modal .modal-footer-full-btn {
+    background-color: #253AA3;
+    color: white;
+    font-size: 1rem;
+    padding: 15px 18px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.purchase-modal .purchase-modal-header {
+    padding:10px;
+}
+
+.purchase-modal .purchase-modal-body {
+    padding:0px 20px;
+}
+
+.purchase-modal .purchase-modal-body .label {
+    text-align: center;
+    color: #cacaca;
+    font-size: .900rem;
+}
+
+.purchase-modal .purchase-modal-body .credits-input {
+    width: 60%;
+    margin: 20px;
+    font-size: 1.5rem;
+}
+
+/* JOBS STYLING START */
+.published-jobs-section {
+    height: 450px;
+    overflow-y: scroll;
+}
+
+.published-jobs-section .heading {
+    text-align: center;
+    font-size: 1.2rem;
+    color: #2A3050;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+.published-jobs-section .add-job-btn {
+    background-color: #253AA3;
+    color: white;
+    margin-top: 20px;
+    padding: 14px 60px;
+    text-align: center;
+    border-radius: 6px;
+    font-size: .900rem;
+}
+
+.jobs-list-item {
+    background-color: white;
+    border: 1px solid #253AA34D;
+    border-radius: 6px;
+    margin-bottom: 10px;
+}
+
+.jobs-list-item .item {
+    flex: 1;
+    padding: 12px;
+}
+
+.jobs-list-item .job-icon {
+    border-radius: 6px;
+    color: white;
+    padding: 12px;
+    font-size: 1.4rem;
+}
+
+.job-blue-icon {
+    background-color: #5473E8;
+}
+
+.job-orange-icon {
+    background-color: #FEAD43;
+}
+
+.jobs-list-item .item .job-label {
+    flex: 1;
+    font-size: 1rem;
+    font-weight: 500;
+    padding-left: 20px;
+}
+
+.jobs-list-item .item .job-published-date {
+    flex: 1;
+    font-size: .800rem;
+    font-weight: 400;
+    text-align: center;
+}
+
+.jobs-list-item .item .job-dropdown {
+    flex: 1;
+    border: 1px solid #253AA34D;
+    background-color: white;
+    font-size: .900rem;
+    margin: 0px 10px;
+}
+
+.jobs-list-item .job-list-item-details-container {
+    /* flex: 1; */
+}
+
+.vertical-divider {
+    width: 1px;
+    background-color: #F5F6FA;
+    min-height: 60px;
+    max-height: 60px;
+}
+.jobs-list-item .job-list-item-details-container {
+    padding: 12px;
+}
+.jobs-list-item .job-list-item-details-container .job-details-btn {
+    border-radius: 6px;
+    padding: 6px 30px;
+    margin: 10px;
+    background-color: #253AA3;
+    min-width: 180px;
+}
+
+.jobs-list-item .job-list-item-details-container .job-details-btn p {
+    color: white;
+    font-size: .800rem;
+    text-transform: uppercase;
+}
+
+.jobs-list-item .job-list-item-details-container .job-details-btn i {
+    color: white;
+    font-size: .800rem;
+}
+
+.jobs-saved-section .heading {
+    text-align: center;
+    font-size: 1.2rem;
+    color: #2A3050;
+    font-weight: 500;
+    margin-bottom: 20px;
+    padding: 14px;
+    background-color: #aeb1c5e7;
+}
+
+.jobs-saved-section-list .no-list-message {
+    text-align: center;
+    font-size: 1.2rem;
+    color: #8e91a5e7;
+    font-weight: 500;
+    margin-bottom: 20px;
+    margin: 12px;
+}
+
+.job-details-modal .job-details-modal-header{
+    background-color: #253AA3;
+}
+
+.job-details-modal .job-details-modal-header .heading {
+    font-size: 1.2rem;
+    color: white;
+    text-align: center;
+    font-weight: 500;
+}
+
+.job-details-modal .job-details-modal-header button {
+    color: white;
+}
+
+.job-details-modal .job-details-modal-body {
+    padding:20px;
+}
+
+.job-details-modal .job-details-modal-body .header {
+    background-color: #253AA3;
+    padding: 20px;
+    border-radius: 0px;
+}
+
+.job-details-modal .job-details-modal-body .header .form-control {
+    margin: 0px 10px;
+    font-size: .900rem;
+}
+
+.job-details-modal .job-details-modal-body .job-details-table .job-details-table-header tr td {
+    font-size: .900rem;
+    font-weight: 400;
+}
+
+.job-details-modal .job-details-modal-body .job-details-table tbody tr td {
+    font-size: .900rem;
+}
+
+/* Add new jobs section */
+.page-body .add-new-jobs-section {
+    margin: 0px !important;
+}
+.add-new-jobs-section .heading {
+    text-align: center;
+    font-size: 1.2rem;
+    color: #2A3050;
+    font-weight: 500;
+    padding: 10px 20px;
+}
+
+.add-new-jobs-section .job-details-form {
+    background-color: rgb(190, 190, 190);
+    padding: 10px 14px;
+}
+
+.add-new-jobs-section .job-details-form .form-control {
+    max-width: 30%;
+    height: 50px;
+}
+
+.add-new-jobs-section .add-new-jobs-section-list {
+    padding: 12px;
+    background-color: white;
+}
+
+
+.add-new-jobs-section .add-new-jobs-section-list .add-new-jobs-section-item .form-control {
+    flex: 1;
+    margin: 0px 4px;
+}
+
+.add-new-jobs-section .add-new-jobs-section-list .add-new-jobs-section-item .sno {
+    font-size: .900rem;
+    font-weight: 500;
+    margin: 10px;
+}
+
+.add-new-jobs-section .add-new-jobs-section-list .add-new-jobs-section-item .round-btn {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background-color: #253AA3;
+    color:white;
+    font-size: 1rem;
+    margin: 0px 5px 0px 10px;
+}
+
+.add-new-jobs-section .job-btn {
+    width: 24%;
+    background-color: #253AA3;
+    color:white;
+    font-size: .900rem;
+    text-align: center;
+    padding: 15px 18px;
+    margin: 0px 5px;
+    border-radius: 6px;
+}
+
+.job-publish-modal .job-publish-modal-header{
+    background-color: #253AA3;
+}
+
+.job-publish-modal .job-publish-modal-header .heading {
+    font-size: 1.2rem;
+    color: white;
+    text-align: center;
+    font-weight: 500;
+}
+
+.job-publish-modal .job-publish-modal-header button {
+    color: white;
+}
+
+.job-publish-modal .job-publish-modal-body {
+    padding:20px;
+}
+
+.job-publish-modal .job-publish-modal-body .heading-section .header {
+    background-color: #253AA3;
+    padding: 15px 20px;
+    border-radius: 0px;
+}
+
+.job-publish-modal .job-publish-modal-body .heading-section .header .label {
+    color: white;
+    font-size: .900rem;
+}
+
+.job-publish-modal .job-publish-modal-body .heading-section .header i {
+    color: white;
+    padding: 0px 10px;
+}
+
+.job-publish-modal .job-publish-modal-body .heading-section .body-section {
+    flex: 1;
+}
+
+.job-publish-modal .job-publish-modal-body .heading-section .body-section .job-btn {
+    width: 24%;
+    background-color: #253AA3;
+    color:white;
+    font-size: .900rem;
+    text-align: center;
+    padding: 15px 18px;
+    margin: 0px 5px;
+    border-radius: 6px;   
+}
+
+.job-publish-modal .job-publish-modal-body .heading-section .job-checkbox {
+    height: 20px;
+    width: 20px;
+    margin-right: 8px;
+}
+
+.job-publish-modal .job-publish-modal-body .job-publish-table tbody tr td .table-item-checkbox {
+    height: 20px;
+    width: 20px;
+    margin-right: 8px;
+}
+
+.job-publish-modal .job-publish-modal-body .heading-section .header .form-control {
+    margin: 0px 10px;
+    font-size: .900rem;
+    max-width: 180px;
+}
+
+.job-publish-modal .job-publish-modal-body .heading-section .header .job-label {
+    font-size: .900rem;
+    color: white;
+}
+
+.job-publish-modal .job-publish-modal-body .heading-section .header .job-heading-btn {
+    font-size: .900rem;
+    color: white;
+    border: 1px solid white;
+    border-radius: 6px;
+    padding: 6px 10px;
+}
+
+
+.job-publish-modal .job-publish-modal-body .job-publish-table .job-publish-table-header tr td {
+    font-size: .900rem;
+    font-weight: 400;
+}
+
+.job-publish-modal .job-publish-modal-body .job-publish-table tbody tr td {
+    font-size: .900rem;
 }
