New pages added

--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -106,6 +106,36 @@
           box-shadow: 0px 4px 15px rgba(7, 79, 223, 0.329);
 }
 
+.close {
+  outline: none;
+  border: 2px solid #353536 !important;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  top: 6px;
+  right: 6px;
+  position: relative;
+}
+
+.close:focus {
+  outline: none;
+}
+
+.close span {
+  position: relative;
+  top: -2px;
+}
+
 .mb-10 {
   margin-bottom: 10px;
 }
@@ -151,8 +181,8 @@
   top: -10px;
   left: 10px;
   background-color: #fff;
-  color: #00000061;
-  font-family: Poppins-Regular;
+  color: #878BA6;
+  font-family: Poppins-Medium;
   font-size: 10px;
   padding: 2px;
 }
@@ -279,5 +309,80 @@
   height: 30px;
   padding: 5px;
   font-size: 12px;
+}
+
+.modal-icon {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin: 20px auto;
+  background-color: rgba(37, 58, 163, 0.25);
+  padding: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.modal-icon i {
+  font-size: 30px;
+  color: #253AA3;
+}
+
+.modal-success {
+  padding: 10px 20px 40px 20px;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.modal-success .modal-success-txt {
+  color: #2A3050;
+  font-family: Poppins-Medium;
+  font-size: 14px;
+  margin: 0;
+}
+
+.modal-success .modal-university-box {
+  margin: 7px auto;
+  background-color: rgba(135, 139, 166, 0.288);
+  padding: 3px 6px;
+  width: 90%;
+  border-radius: 6px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #2A3050;
+}
+
+.modal-success .modal-university-box span {
+  width: 30px;
+  height: 30px;
+  border-radius: 6px;
+  background-color: #ffffff;
+  border: 1px solid #878BA6;
+  font-size: 16px;
+  margin-right: 3px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=modal.css.map */
