--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 html, body {
     padding: 0;
     margin: 0;
-    background-color: #D9E1E7;
+    overflow-x: hidden;
+    background-color: #ECEFF8;
+    /* font-family: Poppins-Regular; */
 }
 
 body .main-body {
@@ -144,6 +146,7 @@ body .main-body .main-container .topbar {
     justify-content: space-around;
     align-items: center;
     align-content: center;
+    z-index: 999 !important;
 }
 
 body .main-body .main-container .topbar .date {
