--- a/assets/css/inner.scss
+++ b/assets/css/inner.scss
@@ -300,7 +300,11 @@
         @extend .gbl-profile-set;
     }
 }
-
+.notification-title{
+    color: #878BA6;
+    margin-bottom: 14px;
+    font-family: Poppins-Semibold;
+}
 
 
 // ===================================== NOTIFICATIONS
