--- a/c2hire/style.css
+++ b/c2hire/style.css
@@ -373,4 +373,26 @@ body {
   color: #000000;
   opacity: 0.8;
 }
+
+
+.policy-heading h1 {
+    text-align: center;
+    font-weight: 600;
+    color: rgb(6,84,128);
+  }
+
+
+.policy-paragraphs p{
+  font-size: 20px;  
+  margin-bottom: 30px;
+} 
+  .policy-paragraphs p label {
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.padspacing {
+  padding-left: 3rem !important;
+  padding-right: 3rem !important;
+}
 /*# sourceMappingURL=style.css.map */
