--- a/c2hire/css/style.scss
+++ b/c2hire/css/style.scss
@@ -481,15 +481,13 @@ hr {
       font-size: 2.5rem;
       margin: 0;
       line-height: 1.2;
-      &:nth-child(2) {
-        margin-bottom: 2rem;
-      }
     }
     p {
-      margin-bottom: 1rem;
+      margin-top: 2rem;
       color: #697671;
       &:last-child {
         width: 316px;
+        margin-top: 1rem;
       }
     }
   }
